--- a/cv.tex
+++ b/cv.tex
@@ -2,35 +2,36 @@
 \usepackage[T1]{fontenc}
     \usepackage[utf8]{inputenc}
     \usepackage{bookman}
-    \usepackage[margin=2cm]{geometry}
-    \usepackage[dvipsnames]{color, xcolor}
-    \usepackage{enumerate}
-    \usepackage{theme}
-% \geometry{left=2cm, top=1.5cm, right=2cm, bottom=2cm, footskip=.5cm} % Configure page margins with geometry
-% \fontdir[fonts/] % Specify the location of the included fonts
-% \name{Claud D.}{Park}
-% \address{246-1002, Gwangmyeongmayrouge Apt. 86, Cheongna lime-ro, Seo-gu, Incheon-si, 404-180, Rep. of KOREA}
-% \mobile{(+82) 10-9030-1843}
-% \email{posquit0.bj@gmail.com}
-% \homepage{www.posquit0.com}
-% \github{posquit0}
-% \linkedin{posquit0}
-%\skype{skypeid}
-%\stackoverflow{SOid}{SOname}
-%\twitter{@twit}
-%\linkedin{linkedin name}
-%\reddit{reddit account}
-% \position{Software Engineer{\enskip\cdotp\enskip}Security Expert} % Your expertise/fields
+\usepackage[margin=2cm]{geometry}
+\usepackage{multicol}
+    \setlength{\columnsep}{1cm}
+\usepackage{graphics, graphicx}
+    \graphicspath{{./imgs/}}
+    \newcommand*{\img}[1]{
+        \raisebox{-.3\baselineskip}{
+            \includegraphics[
+                height=\baselineskip,
+                width=\baselineskip,
+                keepaspectratio,
+            ]{#1}
+        }
+    }
+\usepackage[dvipsnames]{color, xcolor}
+\usepackage{theme}
 
 \begin{document}
     \pagenumbering{gobble}
     \begin{center}
-        \huge{\textsc{Giorgio Della Roscia}}\\[3mm]
+        \huge{\textbf{\textsc{Giorgio Della Roscia}}}\\
         \Large{\textsc{perito informatico}}\\[3mm]
+        \normalsize{
+            \img{phone}+39 346 79 78 232$\quad\vert\quad$
+            \img{email}dellarosciagiorgio@gmail.com$\quad\vert\quad$
+            \img{github}dellarosciagiorgio
+        }
     \end{center}
-    % \input{sections/summary}
-    % \input{sections/education}
-    % \input{sections/experience}
-    % \input{sections/skills}
+    \input{sections/1_summary}
+    \input{sections/2_experience}
+    \input{sections/3_education}
+    \input{sections/4_skills}
 \end{document}
-% $\quad\textbar\quad$
