--- a/sections/3_education.tex
+++ b/sections/3_education.tex
@@ -1,7 +1,7 @@
 \section*{\textcolor{red}{Edu}cation}
 \large{\textbf{Università di Camerino}}
-\hfill\textsl{2022 - corrente}\\[5mm]
-Informatica per la Comunicazione Digitale\\[1cm]
+\hfill\textsl{2022 - corrente}\\[2mm]
+Informatica per la Comunicazione Digitale\\[5mm]
 \large{\textbf{IIS Marconi Pieralisi} (Jesi)}
-\hfill\textsl{2016 - 2021}\\[5mm]
+\hfill\textsl{2016 - 2021}\\[2mm]
 Informatica e Telecomunicazioni
