--- a/sections/4_skills.tex
+++ b/sections/4_skills.tex
@@ -4,11 +4,13 @@
     \begin{itemize}
         \item Linux
         \item \LaTeX
+        \item Programmazione
         \item Project Management
     \end{itemize}
+    \vfill\null\columnbreak
     \large{\textbf{\textsc{Lingue}}}
     \begin{itemize}
-        \item italiano - madrelingua
-        \item inglese - B2
+        \item Italiano - madrelingua
+        \item Inglese - B2
     \end{itemize}
 \end{multicols}
