--- a/sections/2_experience.tex
+++ b/sections/2_experience.tex
@@ -5,6 +5,7 @@
 \begin{itemize}
     \item Bracciante adibito a macchina piantatrice
 \end{itemize}
+\vskip 3mm
 \large{\textbf{we-code Digital Studio}}\\[3mm]
 \textbf{\textsc{Alternanza Scuola Lavoro}}\hfill
 \textsl{2020 - 2021}
@@ -13,6 +14,7 @@
     \item Programmazione guidata sul machine learning
     \item Lavoro in team con tecnica di coordinamento Agile
 \end{itemize}
+\vskip 3mm
 \large{\textbf{Filippo Fulgensi}}\\[3mm]
 \textbf{\textsc{assistente tecnico informatico ed elettronico}}\hfill
 \textsl{2018}
